--- a/app/assets/javascripts/templates/leads/app.hbs
+++ b/app/assets/javascripts/templates/leads/app.hbs
@@ -50,7 +50,7 @@
                             {{ leads.length }} Results
                         </h3>
                     </div>
-                    <div class="panel-body">
+                    <div class="panel-body show-lead">
                         <div class="table-responsive">
                             <table class="table table-bordered table-hover leads-hover">
                                 <thead>
