add in landing page with google oauth button

--- a/app/assets/javascripts/templates/opportunities/edit-form.hbs
+++ b/app/assets/javascripts/templates/opportunities/edit-form.hbs
@@ -126,7 +126,7 @@
             <div class="row">
                 <div class="col-md-12">
 
-                    <h4 class="left"><span class="glyphicon glyphicon-trash" aria-hidden="true"></span></h4>
+                    <h4 class="left"><span class="glyphicon glyphicon-trash new-opp-trash" aria-hidden="true"></span></h4>
                     <button type="button" class="btn btn-primary green right save-opportunity-button update-opportunity margin-left">Save</button> 
                     <button type="button" class="btn btn-default cancel right" data-dismiss="modal">Cancel</button>
 
