add in new routes for google oauth

--- a/app/assets/stylesheets/z-custom.css
+++ b/app/assets/stylesheets/z-custom.css
@@ -267,6 +267,11 @@ body, .nav.navbar-nav.side-nav, #wrapper {
     left: 11em;
 }
 
+.google-name {
+    position: relative;
+    left: 11em;
+}
+
 .new-lead {
     position: relative;
     left: 1em;
