--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -59,13 +59,20 @@
             </div>
 
 
+            <div class="navbar-header">
+
+                <h3 class="google-name">Google Name:</h3>
+
+            </div>            
+
+
             
             <ul class="nav navbar-right top-nav">
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a>
+                    <!-- <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a> -->
                     <ul class="dropdown-menu message-dropdown">
                         <li class="message-preview">
-                            <a href="#">
+                            <!-- <a href="#"> -->
                                 <div class="media">
                                     <span class="pull-left">
                                         <img class="media-object" src="//placehold.it/50x50" alt="">
@@ -77,10 +84,10 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
-                            </a>
+                            <!-- </a> -->
                         </li>
                         <li class="message-preview">
-                            <a href="#">
+                            <!-- <a href="#"> -->
                                 <div class="media">
                                     <span class="pull-left">
                                         <img class="media-object" src="//placehold.it/50x50" alt="">
@@ -92,10 +99,10 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
-                            </a>
+                            <!-- </a> -->
                         </li>
                         <li class="message-preview">
-                            <a href="#">
+                            <!-- <a href="#"> -->
                                 <div class="media">
                                     <span class="pull-left">
                                         <img class="media-object" src="//placehold.it/50x50" alt="">
@@ -107,7 +114,7 @@
                                         <p>Lorem ipsum dolor sit amet, consectetur...</p>
                                     </div>
                                 </div>
-                            </a>
+                            <!-- </a> -->
                         </li>
                         <li class="message-footer">
                             <a href="#">Read All New Messages</a>
@@ -115,7 +122,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a>
+                    <!-- <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a> -->
                     <ul class="dropdown-menu alert-dropdown">
                         <li>
                             <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
@@ -142,7 +149,7 @@
                     </ul>
                 </li>
                 <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b></a>
+                    <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b>
                     <ul class="dropdown-menu">
                         <li>
                             <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
