add in google user details and add in most of gmail auth but still getting errors on authentication for getting emails from gmail

--- a/app/assets/javascripts/templates/leads/show.hbs.erb
+++ b/app/assets/javascripts/templates/leads/show.hbs.erb
@@ -46,7 +46,7 @@
 
                 <div class="row">
                     <h1 class="task-header">
-                        <small>Opportunities<a href="#"><span class="right glyphicon glyphicon-plus create-opportunity-button" aria-hidden="true"></span></small></a>
+                        <small>Opportunities<span class="right glyphicon glyphicon-plus create-opportunity-button" aria-hidden="true"></span></small>
                     </h1>
                     <hr>
                       <div class="opportunity-edit-form-holder">
@@ -209,7 +209,20 @@
                             <span class="glyphicon glyphicon-play"></span>
                             <span class="email-timeline-name">From: John Salesman To: Ben Cochrane </span><span class="days-ago right">1 week ago</span><br><br>
                             <p>
-                                Hi! My name is Steli and I'm a co-founder of Close.io. I'm here to get your team set up and help with anything you may need as you evaluate our platform. Please don't hesitate to reach out with any questions! Test sending an email within Close.io right now! Click on the reply arrow, drop me a note, and check off that task on the left. If you don't know what to say, use a sample email template we prepared for you. If you want to learn more about Close.io, read through the notes below this message. They contain actionable steps that will help you quickly get value out of Close.io. Cheers, Steli                                
+                                {{!-- Hi! My name is Steli and I'm a co-founder of Close.io. I'm here to get your team set up and help with anything you may need as you evaluate our platform. Please don't hesitate to reach out with any questions! Test sending an email within Close.io right now! Click on the reply arrow, drop me a note, and check off that task on the left. If you don't know what to say, use a sample email template we prepared for you. If you want to learn more about Close.io, read through the notes below this message. They contain actionable steps that will help you quickly get value out of Close.io. Cheers, Steli   --}} 
+
+
+
+
+                                
+
+
+
+
+
+
+
+                                                             
                             </p>
                           </div>
                         </div>
