--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -17,8 +17,6 @@
 
     <title>SalesPal</title>
 
-
-
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
     <!--[if lt IE 9]>
@@ -59,114 +57,49 @@
             </div>
 
 
-            <div class="navbar-header">
+<!--             <div class="navbar-header">
 
-                <h3 class="google-name">Google Name:</h3>
+                <h3 class="google-name">Google Name:  
 
-            </div>            
+                    <% if current_user %>
+                        <%= current_user.full_name %>
+                        <%= link_to "Sign Out", signout_path %>
+                    <% end %>    
+
+                </h3>
+
+            </div>    -->         
 
 
-            
-            <ul class="nav navbar-right top-nav">
-                <li class="dropdown">
-                    <!-- <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-envelope"></i> <b class="caret"></b></a> -->
-                    <ul class="dropdown-menu message-dropdown">
-                        <li class="message-preview">
-                            <!-- <a href="#"> -->
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="//placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            <!-- </a> -->
-                        </li>
-                        <li class="message-preview">
-                            <!-- <a href="#"> -->
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="//placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            <!-- </a> -->
-                        </li>
-                        <li class="message-preview">
-                            <!-- <a href="#"> -->
-                                <div class="media">
-                                    <span class="pull-left">
-                                        <img class="media-object" src="//placehold.it/50x50" alt="">
-                                    </span>
-                                    <div class="media-body">
-                                        <h5 class="media-heading"><strong>John Smith</strong>
-                                        </h5>
-                                        <p class="small text-muted"><i class="fa fa-clock-o"></i> Yesterday at 4:32 PM</p>
-                                        <p>Lorem ipsum dolor sit amet, consectetur...</p>
-                                    </div>
-                                </div>
-                            <!-- </a> -->
-                        </li>
-                        <li class="message-footer">
-                            <a href="#">Read All New Messages</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <!-- <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-bell"></i> <b class="caret"></b></a> -->
-                    <ul class="dropdown-menu alert-dropdown">
-                        <li>
-                            <a href="#">Alert Name <span class="label label-default">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-primary">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-success">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-info">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-warning">Alert Badge</span></a>
-                        </li>
-                        <li>
-                            <a href="#">Alert Name <span class="label label-danger">Alert Badge</span></a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#">View All</a>
-                        </li>
-                    </ul>
-                </li>
-                <li class="dropdown">
-                    <a class="dropdown-toggle" data-toggle="dropdown"><i class="fa fa-user"></i> John Smith <b class="caret"></b>
-                    <ul class="dropdown-menu">
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-user"></i> Profile</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-envelope"></i> Inbox</a>
-                        </li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-gear"></i> Settings</a>
-                        </li>
-                        <li class="divider"></li>
-                        <li>
-                            <a href="#"><i class="fa fa-fw fa-power-off"></i> Log Out</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
+            <div class="navbar-header right">
+
+
+                <div class="btn-group dropdown-toggle" data-toggle="dropdown" aria-expanded="false">
+                  <div type="button" class="google-user-dropdown absolutely-centered">
+
+                    <%= image_tag current_user.image, class:"img-circle inline google-image-dropdown" %>
+
+                    <%= current_user.full_name %><span class="caret"></span>
+                  </div>
+                </div>
+
+
+                  <ul class="dropdown-menu dropdown-menu-right google-user-flyout" role="menu">
+                    <li><a href="leads"><%= current_user.first_name %></a></li>
+                    <li><a href="leads"><%= current_user.email %></a></li>
+                    <li class="divider"></li>
+                    <li><a href="leads">Settings</a></li>
+                    <li><a href="leads">Bulk Import</a></li>
+                    <li><a href="leads">Invite Coworkers</a></li>
+                    <li class="divider"></li>
+                    <li><%= link_to "Logout", signout_path %></li>
+                  </ul>
+                
+   
+
+            </div>  
+
+
             <!-- Sidebar Menu Items - These collapse to the responsive navigation menu on small screens -->
             <div class="collapse navbar-collapse navbar-ex1-collapse">
 
