add in email model, email controller, and fix up gmail auth access to gmail gem through saving the current auth details on authentication which removes the forbidden error

--- a/app/assets/javascripts/templates/leads/show.hbs.erb
+++ b/app/assets/javascripts/templates/leads/show.hbs.erb
@@ -8,7 +8,6 @@
                     </h1>
                 </div>
 
-
                 <div class="row">
                     <h1 class="task-header">
                         <small>Tasks<a href="#"><span class=" right glyphicon glyphicon-plus" aria-hidden="true"></span></small></a>
@@ -192,9 +191,9 @@
 
 
 
-                <div class="row timeline-row">
+                <div class="row timeline-row email-panel-holder">
 
-                    <div class="col-md-1">
+<!--                     <div class="col-md-1">
                         <h4><span class="glyphicon glyphicon-envelope timeline-icon" aria-hidden="true"></span></h4>
                     </div>
                     
@@ -209,24 +208,12 @@
                             <span class="glyphicon glyphicon-play"></span>
                             <span class="email-timeline-name">From: John Salesman To: Ben Cochrane </span><span class="days-ago right">1 week ago</span><br><br>
                             <p>
-                                {{!-- Hi! My name is Steli and I'm a co-founder of Close.io. I'm here to get your team set up and help with anything you may need as you evaluate our platform. Please don't hesitate to reach out with any questions! Test sending an email within Close.io right now! Click on the reply arrow, drop me a note, and check off that task on the left. If you don't know what to say, use a sample email template we prepared for you. If you want to learn more about Close.io, read through the notes below this message. They contain actionable steps that will help you quickly get value out of Close.io. Cheers, Steli   --}} 
-
-
-
-
-                                
-
-
-
-
-
-
-
+                                {{!-- Hi! My name is Steli and I'm a co-founder of Close.io. I'm here to get your team set up and help with anything you may need as you evaluate our platform. Please don't hesitate to reach out with any questions! Test sending an email within Close.io right now! Click on the reply arrow, drop me a note, and check off that task on the left. If you don't know what to say, use a sample email template we prepared for you. If you want to learn more about Close.io, read through the notes below this message. They contain actionable steps that will help you quickly get value out of Close.io. Cheers, Steli   --}}
                                                              
                             </p>
                           </div>
                         </div>
-                    </div>
+                    </div> -->
 
                 </div>
 
