--- a/app/assets/javascripts/templates/emails/email.hbs
+++ b/app/assets/javascripts/templates/emails/email.hbs
@@ -1,4 +1,4 @@
-{{!-- 
+
 
 <div class="email-panel">
 
@@ -9,7 +9,7 @@
   <div class="col-md-11 right">
       <div class="panel panel-default timeline-content">
         <div class="panel-heading timeline-title">
-        DuPont investor presentation
+        {{subject}}
         <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
         <span class="right salesperson-first-name">Ben</span>
         </div>
@@ -30,6 +30,3 @@
   </div>
 
 </div>
-
- --}}
-this is the email I want to add in
