add in tabs for showing emails and notes, get email text rendering also

--- a/app/assets/javascripts/templates/leads/show.hbs.erb
+++ b/app/assets/javascripts/templates/leads/show.hbs.erb
@@ -111,7 +111,7 @@
                         </div>
                     </div>
 
-                    <div class="col-md-5">
+                    <div class="col-md-5 lead-status-dropdown-move">
                         <div class="page-header status-select">
 
                             <select class="page-header right form-control status-dropdown">
@@ -127,11 +127,67 @@
                     </div>
                 </div>
 
+
+
+
                 <div class="row">
 
-                    <div class="col-md-6 timeline-sort">
+                    <div class="col-md-12 timeline-sort">
 
-                        <div class="page-header status-select">
+
+
+
+                <!-- <div class="container"> -->
+                        <ul class="nav nav-tabs">
+                            <li class="nav active"><a id="tab" href="#emails" data-toggle="tab">Emails</a></li>
+                            <li class="nav"><a id="tab" href="#notes" data-toggle="tab">Notes</a></li>
+                        </ul>
+
+                                <!-- Tab panes -->
+                        <div class="tab-content">
+                            <div class="tab-pane fade in active" id="emails">
+
+                                <div class="row timeline-row email-panel-holder">
+
+                                </div>
+
+                            </div>
+
+                            <div class="tab-pane fade" id="notes">
+
+                                <div class="row timeline-row">
+
+                                    <div class="col-md-1">
+                                      <h4><span class="glyphicon glyphicon-earphone timeline-icon" aria-hidden="true"></span></h4>
+                                    </div>
+                                  
+                                    <div class="col-md-11 right">
+                                      <div class="panel panel-default timeline-content">
+                                        <div class="panel-heading timeline-title">
+                                            Ben didn't pick up - will try call again tomorrow. 
+                                            <img class="img-rounded timeline-profile-image right" src="http://s27.postimg.org/kdkocn3gj/bencochrane_bio.png">
+                                            <span class="right salesperson-first-name">Ben</span>
+                                        </div>
+                                        <div class="panel-body">
+                                          Called Ben Cochrane <span class="days-ago">5 days ago</span><a href="#"><span class="edit"> edit </span></a>
+                                        </div>
+                                      </div>
+                                    </div>
+
+                                </div>
+
+                            </div>
+
+                        </div>
+                                
+
+
+
+
+
+
+
+<!--                         <div class="page-header status-select">
 
                             <ul class="nav nav-pills">
                               <li role="presentation" class="active"><a href="#">All</a></li>
@@ -140,12 +196,20 @@
                               <li role="presentation"><a href="#">Calls</a></li>
                             </ul>
                                 
-                        </div>
+                        </div> -->
                     </div>
 
                 </div>
 
 
+
+
+
+
+
+
+
+<!-- 
                 <div class="row timeline-row">
 
                     <div class="col-md-1">
@@ -165,10 +229,10 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
 
-                <div class="row timeline-row">
+ <!--                <div class="row timeline-row">
 
                     <div class="col-md-1">
                         <h4><span class="glyphicon glyphicon-comment timeline-icon" aria-hidden="true"></span></h4>
@@ -187,27 +251,17 @@
                         </div>
                     </div>
 
-                </div>
+                </div> -->
 
 
 
-                <div class="row timeline-row email-panel-holder">
+<!--                 <div class="row timeline-row email-panel-holder">
 
 
+                </div> -->
 
 
-
-
-
-
-
-
-
-
-                </div>
-
-
-                <div class="row timeline-row">
+<!--                 <div class="row timeline-row">
 
                     <div class="col-md-1">
                         <h4><span class="glyphicon glyphicon-log-in timeline-icon" aria-hidden="true"></span></h4>
@@ -223,7 +277,7 @@
                         </div>
                     </div>
 
-                </div>                
+                </div>   -->              
 
 
 
