--- a/app/assets/javascripts/templates/opportunities/opportunity.hbs.erb
+++ b/app/assets/javascripts/templates/opportunities/opportunity.hbs.erb
@@ -3,7 +3,7 @@
     <div class="panel-heading">
 
         <h3 class="panel-title"><span class="opportunity-label label label-success">${{value}}</span> John Salesguy <span class="badge">{{status}}</span>
-        <a data-toggle="tooltip" data-placement="top" title="Edit this opportunity" class="right edit-opportunity"><span class="right glyphicon glyphicon-pencil" aria-hidden="true"></span></a>
+        <span data-toggle="tooltip" data-placement="top" title="Edit this opportunity" class="right edit-opportunity"><span class="right glyphicon glyphicon-pencil edit-opportunity" aria-hidden="true"></span></span>
         </h3>
 
     </div>
@@ -12,3 +12,6 @@
         <p>{{comments}}</p>
     </div>
 </div>
+
+
+
