--- a/app/views/layouts/landingpage.html.erb
+++ b/app/views/layouts/landingpage.html.erb
@@ -42,7 +42,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand topnav" href="#">SalesPal</a>
+                <a class="navbar-brand topnav" href="/">SalesPal</a>
             </div>
             <!-- Collect the nav links, forms, and other content for toggling -->
             <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
@@ -77,6 +77,7 @@
                         <h1>SalesPal</h1>
                         <h3>Engage your customers easily.</h3>
                         <hr class="intro-divider">
+                        <h3>Start your 30-day free-trial now. Click below.</h3>
                         <ul class="list-inline intro-social-buttons">
                             <li>
                                 <%= link_to "Login with Google", 'auth/google_oauth2', class: 'btn btn-default btn-lg network-name' %>
@@ -108,11 +109,10 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Death to the Stock Photo:<br>Special Thanks</h2>
-                    <p class="lead">A special thanks to <a target="_blank" href="http://join.deathtothestockphoto.com/">Death to the Stock Photo</a> for providing the photographs that you see in this template. Visit their website to become a member.</p>
+                    <h2 class="section-heading">Quick</h2>
+                    <p class="lead">SalePal features super fast navigation and searches for sales team members.</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/ipad.png" alt="">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6 img-rounded-quick">
                 </div>
             </div>
 
@@ -130,11 +130,10 @@
                 <div class="col-lg-5 col-lg-offset-1 col-sm-push-6  col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">3D Device Mockups<br>by PSDCovers</h2>
-                    <p class="lead">Turn your 2D designs into high quality, 3D product shots in seconds using free Photoshop actions by <a target="_blank" href="http://www.psdcovers.com/">PSDCovers</a>! Visit their website to download some of their awesome, free photoshop actions!</p>
+                    <h2 class="section-heading">Simple Interface</h2>
+                    <p class="lead">We have removed much of the clutter of traditional customer relationship management tools to let your sales staff make calls and emails more easily.</p>
                 </div>
-                <div class="col-lg-5 col-sm-pull-6  col-sm-6">
-                    <img class="img-responsive" src="img/dog.png" alt="">
+                <div class="col-lg-5 col-sm-pull-6  col-sm-6 img-rounded img-rounded-screen">
                 </div>
             </div>
 
@@ -152,11 +151,10 @@
                 <div class="col-lg-5 col-sm-6">
                     <hr class="section-heading-spacer">
                     <div class="clearfix"></div>
-                    <h2 class="section-heading">Google Web Fonts and<br>Font Awesome Icons</h2>
-                    <p class="lead">This template features the 'Lato' font, part of the <a target="_blank" href="http://www.google.com/fonts">Google Web Font library</a>, as well as <a target="_blank" href="http://fontawesome.io">icons from Font Awesome</a>.</p>
+                    <h2 class="section-heading">Productive</h2>
+                    <p class="lead">Keeps your sales team focused on what leads they need to call. All past emails and notes are stored in the same page making conversations with customers more meaningful.</p>
                 </div>
-                <div class="col-lg-5 col-lg-offset-2 col-sm-6">
-                    <img class="img-responsive" src="img/phones.png" alt="">
+                <div class="col-lg-5 col-lg-offset-2 col-sm-6 img-rounded-predictive">
                 </div>
             </div>
 
