add in erb references to images to get images showing in heroku

--- a/app/assets/stylesheets/z-custom.css.erb
+++ b/app/assets/stylesheets/z-custom.css.erb
@@ -480,8 +480,7 @@ li.nav {
       rgba(0, 0, 0, 0.5)
     ),
 
-    url('intro-bg.jpg') no-repeat center center; 
-    /*url('http://upload.wikimedia.org/wikipedia/commons/d/d1/Sydney_Harbour_Bridge_from_Circular_Quay.jpg') no-repeat center center; */
+    url('<%= asset_path("intro-bg.jpg") %>') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -520,7 +519,7 @@ li.nav {
 
 .img-rounded-screen {
     min-height: 20em;
-    background: url('salespal-screen.png') no-repeat center center;
+    background: url('<%= asset_path("salespal-screen.png") %>') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -529,7 +528,7 @@ li.nav {
 
 .img-rounded-quick {
     min-height: 20em;
-    background: url('salespal-screen.png') no-repeat center center;
+    background: url('<%= asset_path("salespal-screen.png") %>') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
@@ -538,7 +537,7 @@ li.nav {
 
 .img-rounded-predictive {
     min-height: 20em;
-    background: url('salespal-screen.png') no-repeat center center;
+    background: url('<%= asset_path("salespal-screen.png") %>') no-repeat center center;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
