add in part of the file upload piece for drag and drop uploads

--- a/app/assets/javascripts/templates/leads/show.hbs
+++ b/app/assets/javascripts/templates/leads/show.hbs
@@ -139,8 +139,8 @@
 
                 <!-- <div class="container"> -->
                         <ul class="nav nav-tabs">
-                            <li class="nav active"><a id="tab" href="#emails" data-toggle="tab">Emails</a></li>
-                            <li class="nav"><a id="tab" href="#notes" data-toggle="tab">Notes</a></li>
+                            <li class="nav active"><a class="tab" data-backbone-link="false" href="#emails" data-toggle="tab">Emails</a></li>
+                            <li class="nav"><a class="tab" data-backbone-link="false" href="#notes" data-toggle="tab">Notes</a></li>
                         </ul>
 
                                 <!-- Tab panes -->
