--- a/app/assets/javascripts/templates/leads/app.hbs
+++ b/app/assets/javascripts/templates/leads/app.hbs
@@ -10,14 +10,11 @@
                     Leads 
                     <button type="button" class="btn btn-default new-lead" data-toggle="modal" data-target="#exampleModal" data-whatever="@mdo" ><span class="glyphicon glyphicon-plus"></span> New Lead</button>
 
-
- {{!--                    <form class="form-inline inline">
+                    <form class="form-inline inline">
                       <div class="form-group">
-
                         <input type="text" class="form-control search-bar" placeholder="Search Leads">
                       </div>
-                    </form> --}}
-
+                    </form>
 
                     <small class="right">Upload New Leads</small>
                 </h1>
@@ -36,6 +33,9 @@
             </div>
         </div>
         
+
+
+      
 
 
         
