--- a/app/assets/stylesheets/z-custom.css.erb
+++ b/app/assets/stylesheets/z-custom.css.erb
@@ -555,13 +555,10 @@ li.nav {
     background-size: cover;    
 }
 
-
-
 .navbar.navbar-default.navbar-fixed-top.topnav {
     background-color: rgba(76, 83, 101, 0.7);
     border: none;
 }
-
 
 .navbar-default .navbar-nav>li>a, .navbar-default .navbar-brand {
     color: #f9f9f9;
@@ -576,4 +573,8 @@ li.nav {
 
 input.upload-csv-button:active {
     border: 20px solid black;
+}
+
+.none {
+    display: none;
 }
